# rapier_physics_server

./: Cargo.toml  README.md  highscores.db
client/: demand.csv  index.html  main.js  usdc.csv
src/: main.rs
